testdata/zkc/invalid/type_10.zkc
//error:9:20-21:unknown type alias
//error:5:8-9:unknown type alias
//error:5:17-18:unknown type alias
//error:6:11-12:unknown type alias
fn f(x:T) -> (y:T) {
    var t:S = 1
    //
    if t == 1 {
      y = x + 4 as T
    }
 }
